# compact_u64

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: absolute.rs  relative.rs
src/: lib.rs
