[package]
name = "compact_u64"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Endian-aware fixed-width integer codecs for ufotofu_codec"

[features]
default = ["std"]
dev = ["std", "arbitrary"]
# Provide functionality that relies on the std library. Enabled by default.
std = []

[dependencies]
ufotofu = "0.7.0"
ufotofu_codec = { version = "0.1.3" }
ufotofu_codec_endian = { version = "0.2.0" }
either = "1.10.0"
arbitrary = { version = "1.0.2", optional = true }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
