[package]
name = "compact_u64"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A machine-friendly varint."
repository = "https://codeberg.org/worm-blossom/compact_u64"

[features]
dev = ["dep:arbitrary"]

[dependencies]
ufotofu = "0.8.2"
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }

[dev-dependencies]
pollster = "0.4.0"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
